--- a/package.json
+++ b/package.json
@@ -8,16 +8,21 @@
   },
   "dependencies": {
     "@types/mongoose": "^5.10.3",
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "class-transformer": "^0.3.2",
     "class-validator": "^0.13.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.15"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/body-parser": "^1.19.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.11",
+    "@types/jsonwebtoken": "^8.5.0",
     "dotenv-cli": "^4.0.0",
     "ts-node": "^9.1.1",
     "ts-node-dev": "^1.1.1",
