updated readme and .env example;

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ MONGO_USER=root
 MONGO_PASSWORD=w^Wk=73VrmnW7+_S
 MONGO_PATH=localhost:27019
 MONGO_DB=api-basic-structure
+JWT_SECRET=ba9a05b7d7b0468683e80deda311dad3
