--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@types/mongoose": "^5.10.3",
+    "@types/nodemailer": "^6.4.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "class-transformer": "^0.3.2",
@@ -15,7 +16,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.15"
+    "mongoose": "^5.11.15",
+    "nodemailer": "^6.4.17"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
