--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,9 @@ MONGO_PASSWORD=w^Wk=73VrmnW7+_S
 MONGO_PATH=localhost:27019
 MONGO_DB=api-basic-structure
 JWT_SECRET=ba9a05b7d7b0468683e80deda311dad3
+
+NODEMAILER_TRANSPORT_HOST=smtp.ethereal.email
+NODEMAILER_TRANSPORT_PORT=587
+NODEMAILER_TRANSPORT_SECURE=false
+NODEMAILER_TRANSPORT_AUTH_USER=<user>
+NODEMAILER_TRANSPORT_AUTH_PASSWORD=<password>
